--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/node": "12.12.11",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "mobx": "^5.15.0",
+    "mobx-react-lite": "^1.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
